# safeher_backend

./: .gitignore  Readme.md  chatBot.py  crud.py  database.py  flake.nix  main.py  mapMarkers.py  models.py  pyproject.toml  requirements.txt  schemas.py  utils.py  vercel.json  x.py
