[tool.poetry]
name = "women-protection"
version = "0.1.0"
description = ""
authors = ["Tanish2002 <tanishkhare@gmail.com>"]
readme = "README.md"
packages = [{include = "women_protection"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
bcrypt = "^4.0.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
